[refactoring] remove warnings