@@ -4,6 +4,7 @@ import com.dp_ua.iksparser.bot.controller.BotController;
 import com.dp_ua.iksparser.dba.entity.CompetitionEntity;
 import com.dp_ua.iksparser.dba.entity.HeatLineEntity;
 import com.dp_ua.iksparser.dba.entity.ParticipantEntity;
+import com.dp_ua.iksparser.dba.entity.SubscriberEntity;
 import com.dp_ua.iksparser.dba.service.CompetitionService;
 import com.dp_ua.iksparser.dba.service.HeatLineService;
 import com.dp_ua.iksparser.dba.service.ParticipantService;
@@ -13,10 +14,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Component
@@ -59,7 +57,7 @@ public class DbServiceOperation {
                     .filter(c -> c.getName().equals(competition.getName())
                             && c.getBeginDate().equals(competition.getBeginDate())
                             && c.getEndDate().equals(competition.getEndDate()))
-                    .collect(Collectors.toList());
+                    .toList();
             if (duplicates.size() == 1) {
                 competitions.remove(competition);
                 continue;
@@ -122,34 +120,30 @@ public class DbServiceOperation {
             Set<String> chats = onePerson.stream()
                     .map(p -> subscribeService.findAllByParticipant(p))
                     .flatMap(List::stream)
-                    .map(s -> s.getChatId())
+                    .map(SubscriberEntity::getChatId)
                     .collect(Collectors.toSet());
 
 
             // get url from one person
             Optional<String> url = onePerson.stream()
-                    .map(p -> p.getUrl())
-                    .filter(u -> u != null) // get any url
+                    .map(ParticipantEntity::getUrl)
+                    .filter(Objects::nonNull) // get any url
                     .findFirst();
 
             // unsubscribe all chats
-            onePerson.forEach(p -> {
-                subscribeService.unsubscribeAll(p);
-            });
+            onePerson.forEach(p -> subscribeService.unsubscribeAll(p));
 
             // set all heatLines to one participant
             participant.setHeatLines(heatLines);
-            heatLines.stream().forEach(h -> {
+            heatLines.forEach(h -> {
                 h.setParticipant(participant);
                 heatLineService.save(h);
             });
 
             // set any url
-            url.ifPresent(u -> participant.setUrl(u));
+            url.ifPresent(participant::setUrl);
             // subscribe one participant to all chats
-            chats.stream().forEach(chatId -> {
-                subscribeService.subscribe(chatId, participant);
-            });
+            chats.forEach(chatId -> subscribeService.subscribe(chatId, participant));
             participantService.save(participant);
             log.info("Save participant: " + participant);
 
